--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,18 @@
     <string name="settings">Settings</string>
     <string name="general">General</string>
     <string name="theme">Theme</string>
+    <string name="sort">Sort</string>
+    <string name="sort_by">Sort by</string>
+    <string name="title">Title</string>
+    <string name="year">Year</string>
+    <string name="rating">Rating</string>
+    <string name="peers">Peers</string>
+    <string name="seeds">Seeds</string>
+    <string name="download_count">Download count</string>
+    <string name="like_count">Like count</string>
+    <string name="date_added">Date added</string>
+    <string name="descending">Descending</string>
+    <string name="ascending">Ascending</string>
+    <string name="order_by">Order by</string>
+    <string name="search">Search</string>
 </resources>
