--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,6 @@
     <string name="download">Download</string>
     <string name="tech_specs">Tech specs</string>
     <string name="save">Save</string>
+    <string name="no_movie_found">No movie found</string>
+    <string name="error_loading_image">Error loading image</string>
 </resources>
