--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="save">Save</string>
     <string name="no_movie_found">No movie found</string>
     <string name="error_loading_image">Error loading image</string>
+    <string name="download_subtitle">Download subtitle</string>
+    <string name="background_image">Background image</string>
+    <string name="navigate_up">Navigate up</string>
+    <string name="download_torrent">Download torrent</string>
 </resources>
